# drf-pydantic-openapi

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
drf_pydantic_openapi/: apps.py  errors.py  exception_handler.py  generator.py  patches.py  path.py  ref_source.py  ref_utils.py  settings.py  urls.py  utils.py  views.py
drf_pydantic_openapi/static/drf_pydantic_openapi/js/: rapidoc-min.js  redoc.standalone.js  swagger-ui-bundle.js
drf_pydantic_openapi/templates/drf_pydantic_openapi/: rapidoc.html  redoc.html  swagger.html
